<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".Settings" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/white" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/tenor_sans"
            android:text="@string/settings"
            android:textColor="#6614DE"
            android:textSize="18sp"
            android:layout_marginLeft="27dp"
            android:layout_marginStart="27dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/numberOfWeeks"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@id/header"
        android:layout_marginTop="21dp"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:fontFamily="@font/tenor_sans"
            android:text="@string/numberOfWeeks"
            android:textColor="#6614DE"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/setNumberOfWeeks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:textColor="@color/titles"
            android:inputType="number"
            tools:targetApi="lollipop" />
    </LinearLayout>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_below="@id/numberOfWeeks"
        android:background="@color/transparent"
        android:fontFamily="@font/tenor_sans"
        android:gravity="center"
        android:textColor="@color/titles"
        android:text="@string/subtitle" />

    <LinearLayout
        android:id="@+id/numberOfVariants"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_below="@id/subtitle"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:fontFamily="@font/tenor_sans"
            android:text="@string/numberOfVariantsTimetable"
            android:textColor="#6614DE"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/numberOfVariantsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:inputType="number"
            android:textColor="@color/titles"
            tools:targetApi="lollipop" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@id/numberOfVariants"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:fontFamily="@font/tenor_sans"
            android:text="@string/share"
            android:textColor="#6614DE"
            android:textSize="18sp" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:src="@drawable/link"
            android:scaleType="fitCenter"
            android:background="@color/transparent"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/privacyAndPolicy"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="51dp"
        android:background="@color/white"
        android:layout_below="@id/share"
        android:gravity="center_vertical" >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                android:fontFamily="@font/tenor_sans"
                android:text="@string/privacyPolicy"
                android:textColor="#6614DE"
                android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/termsAndConditions"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@id/privacyAndPolicy"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:fontFamily="@font/tenor_sans"
            android:text="@string/termsConditions"
            android:textColor="#6614DE"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/clearTimetable"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="51dp"
        android:background="@color/white"
        android:layout_below="@id/termsAndConditions"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:fontFamily="@font/tenor_sans"
            android:text="@string/deleteSchedule"
            android:textColor="#6A6A6A"
            android:textSize="18sp" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:itemIconTint="@color/bottom_navigation_items_color"
        app:itemTextColor="@color/bottom_navigation_items_color"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/menu_bottom_navigation_menu" />

</RelativeLayout>